[gd_scene load_steps=2 format=3 uid="uid://dfo25rjdhav6t"]

[ext_resource type="Script" uid="uid://d31qtql1myrs" path="res://Scripts/开场剧情.gd" id="1_yxlq6"]

[node name="开场剧情显示" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxlq6")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogLabel" type="Label" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "123123123123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonNext" type="Button" parent="."]
layout_mode = 0
offset_left = 922.0
offset_top = 518.0
offset_right = 1129.0
offset_bottom = 620.0
text = "下一句"

[node name="ButtonSkip" type="Button" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 521.0
offset_right = 281.0
offset_bottom = 623.0
text = "跳过"
